syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpcsample.grpc";

service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse) {};
}

message ProductRequest {
  string name = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
}